--- a/CoApp/CoApp.vcxproj.filters
+++ b/CoApp/CoApp.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CoApp.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="tabl.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tabl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
