--- a/CoApp/CoApp.vcxproj
+++ b/CoApp/CoApp.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CoApp.cpp" />
+    <ClCompile Include="tabl.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tabl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
