--- a/CoApp/CoApp.vcxproj.filters
+++ b/CoApp/CoApp.vcxproj.filters
@@ -19,7 +19,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="tabl.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
