--- a/CoApp/CoApp.vcxproj
+++ b/CoApp/CoApp.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CoApp.cpp" />
+    <ClCompile Include="zap.cpp" />
     <ClCompile Include="tabl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tabl.h" />
+    <ClInclude Include="zap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
