--- a/CoApp/CoApp.vcxproj.filters
+++ b/CoApp/CoApp.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="tabl.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="zap.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tabl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="zap.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
